--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/architects.css">
     <title>G3 Architects</title>
 </head>
-<body>
-    <header>
-        
+
+<body class="work-sans-font">
+    <header class="secondary-bg-color">
+        <nav class="navbar display-flex">
+            <h3 class="brand dark1">G3 Architects</h3>
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="" class="nav-link dark2">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link dark2">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link dark2">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="nav-link dark2">Login</a></li>
+            </ul>
+        </nav>
+
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title dark1">Brand New Group of Architects</h1>
+            <p class="dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-style">Explore More</button>
+            </div>   
+            <img class="banner-image" src="images/banner.png" alt="">
+        </div>
     </header>
-    <main></main>
+    <main>
+        <section class="teams display-flex">
+            <div class="img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="our-features">
+                <h1 class="features-title"><span class="quick-list dark3">Quick list</span> <span class="dark1">of Our</span> <span class="features">Features</span></h1>
+                <p class="dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-style">Explore More</button>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
+
 </html>
