--- a/index.html
+++ b/index.html
@@ -43,6 +43,60 @@
                 <button class="btn-style">Explore More</button>
             </div>
         </section>
+
+        <!-- <section class="expireance">
+            <div class="expireance-container">
+                <h1>Features you will love & enjoy</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="expireance-list">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="expireance-list">
+                    <h4>Drag & Drop Builder</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="expireance-list">
+                    <h4>Awesome Modern Design</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="expireance-list">
+                    <h4>Super Easy to Edit</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="expireance-img">
+                <img src="images/architect.png" alt="">
+            </div>
+        </section> -->
+
+        <section class="facts">
+            <div class="facts-container">
+                <h1>Some Facts</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <!-- .fact-box*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+                <div class="fact-box">
+                    <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">54</h4>
+                    <h5 class="fact-name">Awards Winnings</h5>
+                </div>
+                <div class="fact-box">
+                    <img src="images/icons/projects.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">1458</h4>
+                    <h5 class="fact-name">Project Finished</h5>
+                </div>
+                <div class="fact-box">
+                    <img src="images/icons/customers.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">590</h4>
+                    <h5 class="fact-name">Clients Worked</h5>
+                </div>
+                <div class="fact-box">
+                    <img src="images/icons/email.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">22578</h4>
+                    <h5 class="fact-name">Email Send</h5>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
