--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title dark1">Brand New Group of Architects</h1>
-            <p class="dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-            <button class="btn-style">Explore More</button>
-            </div>   
+                <p class="dark3">There are many variations of passages of Lorem Ipsum available, but the majority have
+                    suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-style">Explore More</button>
+            </div>
             <img class="banner-image" src="images/banner.png" alt="">
         </div>
     </header>
@@ -38,8 +39,9 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="our-features">
-                <h1 class="features-title"><span class="quick-list dark3">Quick list</span> <span class="dark1">of Our</span> <span class="features">Features</span></h1>
-                <p class="dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h1 class="section-title"><span class="quick-list dark3">Quick list</span> <span class="dark1">of Our</span> <span class="features">Features</span></h1>
+                <p class="dark3">There are many variations of passages of Lorem Ipsum available, but the majority have
+                    suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-style">Explore More</button>
             </div>
         </section>
@@ -71,29 +73,37 @@
         </section> -->
 
         <section class="facts">
+            <h1 class="section-title">Some Facts</h1>
+            <p class=" facts-description dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
             <div class="facts-container">
-                <h1>Some Facts</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-                <!-- .fact-box*4>img.fact-icon+h4.fact-number+h5.fact-name -->
-                <div class="fact-box">
-                    <img src="images/icons/ribon.png" alt="" class="fact-icon">
-                    <h4 class="fact-number">54</h4>
-                    <h5 class="fact-name">Awards Winnings</h5>
+                <!-- .fact-card*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number dark2">54</h4>
+                        <h5 class="fact-name dark3">Awards Winnings</h5>
+                    </div>
                 </div>
-                <div class="fact-box">
-                    <img src="images/icons/projects.png" alt="" class="fact-icon">
-                    <h4 class="fact-number">1458</h4>
-                    <h5 class="fact-name">Project Finished</h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number dark2">1458</h4>
+                        <h5 class="fact-name dark3">Project Finished</h5>
+                    </div>
                 </div>
-                <div class="fact-box">
-                    <img src="images/icons/customers.png" alt="" class="fact-icon">
-                    <h4 class="fact-number">590</h4>
-                    <h5 class="fact-name">Clients Worked</h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number dark2">590</h4>
+                        <h5 class="fact-name dark3">Clients Worked</h5>
+                    </div>
                 </div>
-                <div class="fact-box">
-                    <img src="images/icons/email.png" alt="" class="fact-icon">
-                    <h4 class="fact-number">22578</h4>
-                    <h5 class="fact-name">Email Send</h5>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number dark2">22578</h4>
+                        <h5 class="fact-name dark3">Email Send</h5>
+                    </div>
                 </div>
             </div>
         </section>
