--- a/index.html
+++ b/index.html
@@ -107,6 +107,19 @@
                 </div>
             </div>
         </section>
+        <section class="sponsor"> 
+            <div class="sponsor-info">
+                <h1 class="section-title">Our Sponspors</h1>
+            <p class="dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>                       
+            <div class="sponsor-logo">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
