--- a/index.html
+++ b/index.html
@@ -46,31 +46,36 @@
             </div>
         </section>
 
-        <!-- <section class="expireance">
+        <section class="expireance display-flex">
             <div class="expireance-container">
-                <h1>Features you will love & enjoy</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h3 id="feature-section-title" class="section-title">Features you will <br> love & enjoy</h3>
+                <p class="dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <div class="expireance-list">
-                    <h4>Dexktop & Mobile Version</h4>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    <h4 class="expireance-title">Dexktop & Mobile Version</h4>
+                    <p class="dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                 </div>
                 <div class="expireance-list">
-                    <h4>Drag & Drop Builder</h4>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    <h4 class="expireance-title">Drag & Drop Builder</h4>
+                    <p class="dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                 </div>
                 <div class="expireance-list">
-                    <h4>Awesome Modern Design</h4>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    <h4 class="expireance-title">Awesome Modern Design</h4>
+                    <p class="dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                 </div>
                 <div class="expireance-list">
-                    <h4>Super Easy to Edit</h4>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    <h4 class="expireance-title">Super Easy to Edit</h4>
+                    <p class="dark3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                 </div>
             </div>
-            <div class="expireance-img">
+            <div class="feature-architect">
                 <img src="images/architect.png" alt="">
+                <button id="experience-badge" class="btn-style">
+                    <span id="experience-year">10+Years</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
             </div>
-        </section> -->
+        </section>
 
         <section class="facts">
             <h1 class="section-title">Some Facts</h1>
